Fixed header layout issue.

--- a/Styles/Core/layout.css
+++ b/Styles/Core/layout.css
@@ -37,6 +37,10 @@ header
     text-decoration: none;
     width: 20rem;
 }
+.branding a
+{
+    text-decoration: none;
+}
 .branding .tag
 {
     font-size: var(--scale-magnified);
